--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,13 +3,13 @@
 		<br><br>
 		<div class="row">
 			<br>
-	    <div class="profile span5 offset2">
-	      <img src= "/assets/jaci.jpg" width= "267" height= "500"/>	     
+	    <div class="profile span4 offset2">
+	      <img src= "/assets/new.jpg" width= "200" height= "377"/>	     
 	    </div>
 
-		<div class="profile span6"/>
-		<br><br><br><br><br><br><br><br>
-		<h7>Thank you for visiting my Web site! I am Jaci Harris (formerly
+		<div class="profile span5"/>
+		<br><br><br><br><br><br>
+		<h7>Thank you for visiting my site! I am Jaci Harris (formerly
 			Jaci Schneider), and I am an information science student,
 			an editor, a writer, and a library intern. <br><br>
 			On this site you can find my résumé, my professional goals,
