--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			<br>
 	    <div class="profile span4 offset2">
-	      <img src= "/assets/new.jpg" width= "200" height= "377"/>	     
+	      <img src= "/assets/website.jpg" width= "200" height= "377"/>	     
 	    </div>
 
 		<div class="profile span5"/>
