making changes to blogs index view

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,7 +3,7 @@
 		<div class ="container">
 			<br>
 			<br>
-			<% blogs.each do |goal| %>
+			<% @blogs.each do |blog| %>
 			<div class= "row">								
 			<div class="span9 offset3">
 		    	<h3><%= blog.post_title %></h3>
