hiding professional goals

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 			<ul>
 	        	<li><%= link_to "Résumé", resume_page_path %></li>
 	       		<li><%= link_to "Projects", projects_path %></li> 
-	       		<li><%= link_to "Professional Goals", goals_path %></li> 
+	       		<!-- <li><%= link_to "Professional Goals", goals_path %></li>  -->
 	       		<li><%= link_to "Blog", blogs_path %></li> 
 	
 			</ul>
