--- a/app/views/pages/resume_page.html.erb
+++ b/app/views/pages/resume_page.html.erb
@@ -3,13 +3,13 @@
 			<br>
 			<br>
 	    <div class="profile span4 offset1" >
-			<iframe src="https://docs.google.com/file/d/0B4ZWu2Q8faGEMlNncGhwczJHTUk&embedded=true" width="800" height="700" style="border: none;"></iframe>
+			<iframe src="https://docs.google.com/open?id=0B4ZWu2Q8faGEMlNncGhwczJHTUk&embedded=true" width="800" height="700" style="border: none;"></iframe>
 		</div>
 </div>
 <div class="row">
 <div class="offset2" >
 <br>
-<h6>Click <a href="https://s3.amazonaws.com/jaci-harris/Jaci+Harris+R%C3%A9sum%C3%A9.pdf"> here to download </a> a PDF version of Jaci's resume.</h6>
+<h6>Click <a href="https://s3.amazonaws.com/jaci-harris/Jaci+Harris+Resume.pdf"> here to download </a> a PDF version of Jaci's resume.</h6>
 </div>
 </div>
 </div>
