updating resume page for jaci

--- a/app/views/pages/resume_page.html.erb
+++ b/app/views/pages/resume_page.html.erb
@@ -3,7 +3,7 @@
 			<br>
 			<br>
 	    <div class="profile span4 offset1" >
-			<iframe src="https://docs.google.com/open?id=0B4ZWu2Q8faGEMlNncGhwczJHTUk&embedded=true" width="800" height="700" style="border: none;"></iframe>
+			<iframe src="https://docs.google.com/viewer?authuser=0&srcid=0B4ZWu2Q8faGEMlNncGhwczJHTUk&pid=explorer&a=v&chrome=false&embedded=true" width="800" height="700" style="border: none;"></iframe>
 		</div>
 </div>
 <div class="row">
