link to professional goals reappear and add link to external blog

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 			<ul>
 	        	<li><%= link_to "Résumé", resume_page_path %></li>
 	       		<li><%= link_to "Projects", projects_path %></li> 
-	       		<!-- <li><%= link_to "Professional Goals", goals_path %></li>  -->
-	       		<li><%= link_to "Blog", blogs_path %></li> 
+	       		<li><%= link_to "Professional Goals", goals_path %></li> 
+	       		<li><%= link_to "Blog", blog_page_path %></li> 
 	
 			</ul>
 			<ul class = "secondary-nav">
